{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 237,
  "lineage": "dc22b30c-b49d-bc6a-7cce-33217fe7550c",
  "resources": [
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3fd0f5d33134a76",
            "arn": "arn:aws:ec2:ap-northeast-1:722081103407:instance/i-08f061dcfd0a1d784",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f061dcfd0a1d784",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd8bd63587fd2b78",
            "private_dns": "ip-10-0-1-52.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.52",
            "public_dns": "ec2-3-115-20-119.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.115.20.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af08caa7011a4777",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000f1a6b950a4b616",
            "tags": {
              "Name": "default"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0967626cdd2c93f44"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:722081103407:internet-gateway/igw-0bd6c8ff30963b58e",
            "id": "igw-0bd6c8ff30963b58e",
            "owner_id": "722081103407",
            "tags": {
              "Name": "default"
            },
            "vpc_id": "vpc-01d4af003d18954fb"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:722081103407:route-table/rtb-069896558481002f6",
            "id": "rtb-069896558481002f6",
            "owner_id": "722081103407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd6c8ff30963b58e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default"
            },
            "vpc_id": "vpc-01d4af003d18954fb"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e116a817dbb9c76c",
            "route_table_id": "rtb-069896558481002f6",
            "subnet_id": "subnet-000f1a6b950a4b616"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:722081103407:security-group/sg-0967626cdd2c93f44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0967626cdd2c93f44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-ec2",
            "name_prefix": "",
            "owner_id": "722081103407",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01d4af003d18954fb"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:722081103407:subnet/subnet-000f1a6b950a4b616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-000f1a6b950a4b616",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722081103407",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-01d4af003d18954fb"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:722081103407:vpc/vpc-01d4af003d18954fb",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06726b34f4adfec0a",
            "default_route_table_id": "rtb-07b785e7edd7bd539",
            "default_security_group_id": "sg-0fc13d0e8b7fb72ca",
            "dhcp_options_id": "dopt-13782374",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01d4af003d18954fb",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-021ce30c4506aca3d",
            "ipv6_cidr_block": "2406:da14:8b4:1800::/56",
            "main_route_table_id": "rtb-07b785e7edd7bd539",
            "owner_id": "722081103407",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            }
          }
        }
      ]
    }
  ]
}